fix: implement smooth scrolling behavior for main content and custom scrollbar

--- a/angular-frontend/src/styles.css
+++ b/angular-frontend/src/styles.css
@@ -2,3 +2,12 @@
 
 @import 'tailwindcss';
 @config "../tailwind.config.ts";
+
+html, body{
+  scroll-behavior: smooth !important;
+}
+
+.custom-scrollbar{
+  scroll-behavior: smooth !important;
+}
+
